# RIFE-Engine

./: .gitignore  .gitmodules  CMakeLists.txt  CMakeSettings.json  Keyboard.h  RIFEW Engine.sln  RIFEW Engine.vcxproj  RIFEW Engine.vcxproj.filters  Triangle.cpp  Triangle.h  Window.h  main.cpp
Core/: CMakeLists.txt  main.cpp
Engine/: CMakeLists.txt  Keyboard.h  Time.h  Window.cpp  Window.h  main.cpp
Engine/Application/: CMakeLists.txt  Scene.h  Test.cpp  Triangle.cpp  Triangle.h  Window.h
Engine/Application/Include/: Application.h  Scene.h  Test.h
Engine/Application/Source/: Application.cpp  Triangle.cpp
Engine/Core/: CMakeLists.txt
Engine/Core/Main/: Scene.h  Window.cpp  Window.h
Engine/Core/Tools/: Keyboard.h
Engine/Graphics/: CMakeLists.txt  VkUtilities.cpp
Engine/Graphics/Include/: MathUtilities.h  VkUtilities.h
Engine/Graphics/Source/: VkUtilities.cpp
Engine/Tools/: CMakeLists.txt  Clock.cpp  Clock.h  Keyboard.cpp  Time.cpp
Engine/Tools/Include/: Clock.h
Engine/Tools/Source/: Keyboard.cpp
Example/: CMakeLists.txt  main.cpp
Program/: CMakeLists.txt
Program/Engine/Application/: CMakeLists.txt
Program/Engine/Application/Include/: Application.h  DataBase.h  Scene.h  Test.h  Triangle.h
Program/Engine/Application/Source/: Application.cpp  DataBase.cpp  Test.cpp  Triangle.cpp
Program/Engine/Core/: CMakeLists.txt
Program/Engine/Core/Base/: CMakeLists.txt
Program/Engine/Core/Base/Include/: Clock.h  Component.h  GameObject.h  Object.h  RifeCore.h  RifePath.h
Program/Engine/Core/Base/Source/: Clock.cpp  Component.cpp  GameObject.cpp  Object.cpp
Program/Engine/Core/Include/: Application.h  Scene.h
Program/Engine/Core/Math/: CMakeLists.txt
Program/Engine/Core/Math/Include/: MathIncludes.h  PerlinNoise.h  RifeMath.h  Rm.h  Transform.h
Program/Engine/Core/Math/Source/: PerlinNoise.cpp  RifeMath.cpp  Rm.cpp
Program/Engine/Core/Source/: Application.cpp
Program/Engine/Graphics/: CMakeLists.txt
Program/Engine/Graphics/Include/: Camera.h  GlobalLights.h  GraphicsDependencys.h  GraphicsIncludes.h  GraphicsLibs.h  GraphicsPipeline.h  Light.h  Lights.h  Material.h  MaterialBuilder.h  MaterialFactory.h  MaterialInstance.h  MaterialProperties.h  Mesh.h  MeshBuilder.h  MeshFactory.h  MeshRenderer.h  Object.h  Renderer.h  RifeGraphics.h  RifeMath.h  Shader.h  ShaderBuilder.h  ShaderFactory.h  ShaderItem.h  Skybox.h  SkyboxRenderer.h  SolidObject.h  Texture.h  TextureFactory.h  Transform.h  UniformBufferObject.h  Vertex.h  VkUtilities.h  VulkanBase.h  VulkanData.h  VulkanInclude.h  VulkanTools.h
Program/Engine/Graphics/Source/: Buffer.cpp  Camera.cpp  GlobalLights.cpp  GraphicsPipeline.cpp  Lights.cpp  Material.cpp  MaterialBuilder.cpp  MaterialFactory.cpp  MaterialInstance.cpp  Mesh.cpp  MeshBuilder.cpp  MeshFactory.cpp  MeshRenderer.cpp  Renderer.cpp  Shader.cpp  ShaderBuilder.cpp  ShaderFactory.cpp  ShaderItem.cpp  Skybox.cpp  SkyboxRenderer.cpp  SolidObject.cpp  Texture.cpp  TextureFactory.cpp  Transform.cpp  Vertex.cpp  VkUtilities.cpp  VulkanBase.cpp  VulkanData.cpp  VulkanTools.cpp
Program/Engine/Tools/: CMakeLists.txt
Program/Engine/Tools/Include/: Camera.h  Clock.h  Keyboard.h  Mouse.h  Random.h  RifeTools.h  Rm.h
Program/Engine/Tools/Source/: Camera.cpp  Clock.cpp  Keyboard.cpp  Mouse.cpp  Random.cpp  Rm.cpp
Program/Engine/Utils/: CMakeLists.txt
Program/Engine/Utils/Include/: Component.h  Object.h  Rm.h  Types.h
Program/Engine/Utils/Source/: Object.cpp
Program/Main/Assets/: CMakeLists.txt
Program/Main/Assets/Include/: Movable.h  RifeAssets.h  RotatingCube.h  TerrainGenerator.h
Program/Main/Assets/Source/: TerrainGenerator.cpp
Program/Main/Common/: CMakeLists.txt
Program/Main/Common/Include/: DataLoader.h  Movable.h  RotatingCube.h  ScenePlayer.h  Serializer.h  Test.h  Triangle.h
Program/Main/Common/Resources/Shaders/: compile.bat
Program/Main/Common/Resources/Shaders/GLSL/: shader.frag  shader.vert
Program/Main/Common/Source/: DataLoader.cpp  ScenePlayer.cpp  Serializer.cpp  Test.cpp  Triangle.cpp
Program/Main/Scene/: CMakeLists.txt
Program/Main/Scene/Include/: ScenePlayer.h
Program/Main/Scene/Source/: ScenePlayer.cpp
Scripts/: compile.bat
cmake/: FindEigen3.cmake  FindGLEW.cmake  FindGLFW.cmake  FindGLI.cmake  FindGLM.cmake  FindOpenGL.cmake  (+3 more)
src/engine/core/base/: CMakeLists.txt
src/engine/core/base/include/: Clock.h  Component.h  Event.h  GameObject.h  RifeCore.h  RifePath.h  Scene.h
src/engine/core/base/source/: Clock.cpp  Component.cpp  GameObject.cpp  Scene.cpp
src/engine/core/math/: CMakeLists.txt
src/engine/core/math/include/: MathIncludes.h  RifeMath.h
src/engine/core/math/source/: PerlinNoise.cpp  RifeMath.cpp
src/engine/graphics/: CMakeLists.txt
src/engine/graphics/include/: Buffer.h  Camera.h  GlobalLights.h  Lights.h  Material.h  MaterialBuilder.h  MaterialInstance.h  Mesh.h  MeshFactory.h  Renderer.h  ShaderBuilder.h  ShaderItem.h  Skybox.h  SkyboxRenderer.h  TextureFactory.h  Transform.h  VulkanBase.h  VulkanData.h  VulkanInclude.h
src/engine/graphics/source/: Camera.cpp  GlobalLights.cpp  Lights.cpp  Material.cpp  MaterialInstance.cpp  MeshBuilder.cpp  MeshFactory.cpp  MeshRenderer.cpp  Renderer.cpp  Shader.cpp  ShaderBuilder.cpp  ShaderFactory.cpp  Skybox.cpp  SkyboxRenderer.cpp  TextureFactory.cpp  Transform.cpp  Vertex.cpp  VulkanBase.cpp  VulkanData.cpp
src/engine/tools/: CMakeLists.txt
src/engine/tools/include/: Keyboard.h  Mouse.h  Random.h  RifeTools.h
src/engine/tools/source/: Keyboard.cpp  Mouse.cpp  Random.cpp
src/engine/window/: CMakeLists.txt
src/engine/window/include/: Database.h  Window.h
src/engine/window/source/: Database.cpp  Window.cpp
src/example/: CMakeLists.txt  main.cpp
src/example/components/: CMakeLists.txt
src/example/components/include/: Movable.h
src/example/include/: Movable.h  RotatingCube.h  ScenePlayer.h
src/example/scene/: CMakeLists.txt
src/example/scene/include/: ScenePlayer.h
src/example/scene/source/: ScenePlayer.cpp  Serializer.cpp
src/example/source/: ScenePlayer.cpp  TerrainGenerator.cpp
(+58 files in other folders)
